unpackaged/main/default/objects/fferpcore__UserManagementTemplateData__mdt/fferpcore__UserManagementTemplateData__mdt.object-meta.xml
<CustomObject>
    <description>The data to be applied to a template from a plugin during the execution of the User Information Batch Job.</description>
    <label>User Management Template Data</label>
    <pluralLabel>User Management Template Data</pluralLabel>
</CustomObject>