unpackaged/main/default/objects/fferpcore__UserManagementTemplateData__mdt/fields/fferpcore__Plugin__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__Plugin__c</fullName>
    <description>Lookup to the user information plugin to use for this user management data.</description>
    <inlineHelpText>Lookup to the user information plugin to use for this user management data.</inlineHelpText>
    <label>Plugin</label>
    <referenceTo>fferpcore__Plugin__mdt</referenceTo>
    <relationshipLabel>User Management Data</relationshipLabel>
    <relationshipName>UserManagementData</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>