unpackaged/main/default/objects/fferpcore__UserManagementTemplateData__mdt/fields/fferpcore__Template__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__Template__c</fullName>
    <description>Template to which this user management template data belongs.</description>
    <inlineHelpText>Template to which this user management template data belongs.</inlineHelpText>
    <label>User Management Template</label>
    <referenceTo>fferpcore__UserManagementTemplate__mdt</referenceTo>
    <relationshipLabel>Data</relationshipLabel>
    <relationshipName>Data</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>