unpackaged/main/default/objects/fferpcore__UserManagementTemplateData__mdt/fields/fferpcore__Value__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__Value__c</fullName>
    <description>Value of the template data to be applied using the Plugin.</description>
    <inlineHelpText>Value of the template data to be applied using the Plugin.</inlineHelpText>
    <label>Value</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>